--- a/index.html
+++ b/index.html
@@ -3,21 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
-    <meta name="description" content="Portfolio page description">
-    <meta name="author" content="Dmitry Koval">
-    <title>Dmitry Koval: Portfolio</title>
-||||||| 4fadf38... Change page title
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
-    <title>Dmitry Koval: Portfolio</title>
-=======
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
->>>>>>> parent of 4fadf38... Change page title
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
